--- a/test/index.html
+++ b/test/index.html
@@ -86,21 +86,30 @@
         <div class="inner-sec">
           <div class="sub-header active">
             <div class="d-flex custom-top">
-              <div><img src="images/svgpng/flag 1.png" alt="" class="flags" /></div>
-              <div><img src="images/svgpng/flag 2.png" alt="" class="flags" /></div>
-              <div><img src="images/svgpng/flag 3.png" alt="" class="flags" /></div>
-              <div><img src="images/svgpng/flag 4.png" alt="" class="flags" /></div>
+              <div><img loading="lazy" src="images/svgpng/flag 1.png" alt="" class="flags" /></div>
+              <div><img loading="lazy" src="images/svgpng/flag 2.png" alt="" class="flags" /></div>
+              <div><img loading="lazy" src="images/svgpng/flag 3.png" alt="" class="flags" /></div>
+              <div><img loading="lazy" src="images/svgpng/flag 4.png" alt="" class="flags" /></div>
             </div>
-            <img src="images/svgpng/logo-main.png" alt="logo-main" class="logo logo-active" />
+            <img
+              loading="lazy"
+              src="images/svgpng/logo-main.png"
+              alt="logo-main"
+              class="logo logo-active"
+            />
             <div class="d-flex custom-top">
-              <div><img src="images/svgpng/flag 5.png" alt="" class="flags" /></div>
-              <div><img src="images/svgpng/flag 6.png" alt="" class="flags" /></div>
-              <div><img src="images/svgpng/flag 7.png" alt="" class="flags active" /></div>
-              <div><img src="images/svgpng/flag 8.png" alt="" class="flags active" /></div>
+              <div><img loading="lazy" src="images/svgpng/flag 5.png" alt="" class="flags" /></div>
+              <div><img loading="lazy" src="images/svgpng/flag 6.png" alt="" class="flags" /></div>
+              <div>
+                <img loading="lazy" src="images/svgpng/flag 7.png" alt="" class="flags active" />
+              </div>
+              <div>
+                <img loading="lazy" src="images/svgpng/flag 8.png" alt="" class="flags active" />
+              </div>
             </div>
             <!-- <p>Log in</p>
                     <button class="classic-btn">Start Free Trial</button>
-                    <img src="images/menu-icon.png" alt="menu" class="menu"> -->
+                    <img loading=lazy src="images/menu-icon.png" alt="menu" class="menu"> -->
           </div>
           <p class="main-h">Learn a New Language by Watching Great TV</p>
           <div class="content-home">
@@ -115,12 +124,21 @@
                 >
                 <a href="https://lingopie.com/registration"
                   ><button class="classic-btn">
-                    Try it Free<img src="images/svgpng/right-arrow.png" alt="" /></button
+                    Try it Free<img
+                      loading="lazy"
+                      src="images/svgpng/right-arrow.png"
+                      alt=""
+                    /></button
                 ></a>
               </div>
               <div class="col-sm-12 col-md-12 col-lg-8" id="right_image">
                 <div class="text-right text-md-center w-100 browser-window position-relative">
-                  <img src="images/home-window.png" alt="window-home" class="w-100 mobile-img" />
+                  <img
+                    loading="lazy"
+                    src="images/home-window.png"
+                    alt="window-home"
+                    class="w-100 mobile-img"
+                  />
                   <video
                     class="video-home"
                     id="headvideo"
@@ -137,8 +155,18 @@
                     Your browser does not support the video tag.
                   </video>
                   <span class="media-controls">
-                    <img src="images/svgpng/volume-up.png" alt="yes-volume" srcset="" />
-                    <img src="images/svgpng/no-volume.png" alt="no-volume" srcset="" />
+                    <img
+                      loading="lazy"
+                      src="images/svgpng/volume-up.png"
+                      alt="yes-volume"
+                      srcset=""
+                    />
+                    <img
+                      loading="lazy"
+                      src="images/svgpng/no-volume.png"
+                      alt="no-volume"
+                      srcset=""
+                    />
                   </span>
                 </div>
               </div>
@@ -175,14 +203,22 @@
             </div>
             <div class="col-sm-12 col-md-12 col-lg-7" id="show_mac">
               <div class="text-right text-md-center">
-                <img src="images/mac-show.png" alt="mac-iphone" id="mac_iphone" class="img-fluid" />
                 <img
+                  loading="lazy"
+                  src="images/mac-show.png"
+                  alt="mac-iphone"
+                  id="mac_iphone"
+                  class="img-fluid"
+                />
+                <img
+                  loading="lazy"
                   src="images/mac-show2.png"
                   alt="mac-iphone"
                   id="mac_iphone2"
                   class="img-fluid"
                 />
                 <img
+                  loading="lazy"
                   src="images/mac-show3.png"
                   alt="mac-iphone"
                   id="mac_iphone3"
@@ -197,12 +233,22 @@
         <div class="inner-sec">
           <p class="main-p">As seen in...</p>
           <div class="as-company">
-            <div class="img-parent"><img src="images/svgpng/variety.png" alt="" /></div>
-            <div class="img-parent"><img src="images/svgpng/forbs.png" alt="" /></div>
-            <div class="img-parent"><img src="images/svgpng/inc.png" alt="" /></div>
-            <div class="img-parent"><img src="images/svgpng/yahoo.png" alt="" /></div>
-            <div class="img-parent"><img src="images/svgpng/frommers.png" alt="" /></div>
-            <div class="img-parent"><img src="images/svgpng/benzinga.png" alt="" /></div>
+            <div class="img-parent">
+              <img loading="lazy" src="images/svgpng/variety.png" alt="" />
+            </div>
+            <div class="img-parent">
+              <img loading="lazy" src="images/svgpng/forbs.png" alt="" />
+            </div>
+            <div class="img-parent"><img loading="lazy" src="images/svgpng/inc.png" alt="" /></div>
+            <div class="img-parent">
+              <img loading="lazy" src="images/svgpng/yahoo.png" alt="" />
+            </div>
+            <div class="img-parent">
+              <img loading="lazy" src="images/svgpng/frommers.png" alt="" />
+            </div>
+            <div class="img-parent">
+              <img loading="lazy" src="images/svgpng/benzinga.png" alt="" />
+            </div>
           </div>
         </div>
       </div>
@@ -218,7 +264,7 @@
         <div class="text-center">
           <a href="https://lingopie.com/registration"
             ><button class="classic-btn m-auto">
-              Try it Free <img src="images/svgpng/right-arrow.png" alt="" /></button
+              Try it Free <img loading="lazy" src="images/svgpng/right-arrow.png" alt="" /></button
           ></a>
         </div>
       </div>
@@ -233,7 +279,7 @@
             <div class="col-sm-12 col-md-4 col-lg-4">
               <div class="d-flex flex-column align-items-center">
                 <div class="d-flex">
-                  <img class="stars" src="images/star-white.png" alt="" />
+                  <img loading="lazy" class="stars" src="images/star-white.png" alt="" />
                 </div>
                 <span class="stars-label">Beginner</span>
               </div>
@@ -241,8 +287,8 @@
             <div class="col-sm-12 col-md-4 col-lg-4">
               <div class="d-flex flex-column align-items-center">
                 <div class="d-flex">
-                  <img class="stars" src="images/star-white.png" alt="" />
-                  <img class="stars" src="images/star-white.png" alt="" />
+                  <img loading="lazy" class="stars" src="images/star-white.png" alt="" />
+                  <img loading="lazy" class="stars" src="images/star-white.png" alt="" />
                 </div>
                 <span class="stars-label">Intermediate</span>
               </div>
@@ -250,9 +296,9 @@
             <div class="col-sm-12 col-md-4 col-lg-4">
               <div class="d-flex flex-column align-items-center">
                 <div class="d-flex">
-                  <img class="stars" src="images/star-white.png" alt="" />
-                  <img class="stars" src="images/star-white.png" alt="" />
-                  <img class="stars" src="images/star-white.png" alt="" />
+                  <img loading="lazy" class="stars" src="images/star-white.png" alt="" />
+                  <img loading="lazy" class="stars" src="images/star-white.png" alt="" />
+                  <img loading="lazy" class="stars" src="images/star-white.png" alt="" />
                 </div>
                 <span class="stars-label">Advanced</span>
               </div>
@@ -264,12 +310,12 @@
         <div class="inner-sec">
           <p class="main-p">The Best TV from around the world</p>
           <div class="channel-parent">
-            <img src="images/azteca.png" alt="" />
-            <img src="images/newen.png" alt="" />
-            <img src="images/tfi.png" alt="" />
-            <img src="images/rtve.png" alt="" />
-            <img src="images/caracol.png" alt="" />
-            <img src="images/nick.png" alt="" />
+            <img loading="lazy" src="images/azteca.png" alt="" />
+            <img loading="lazy" src="images/newen.png" alt="" />
+            <img loading="lazy" src="images/tfi.png" alt="" />
+            <img loading="lazy" src="images/rtve.png" alt="" />
+            <img loading="lazy" src="images/caracol.png" alt="" />
+            <img loading="lazy" src="images/nick.png" alt="" />
           </div>
         </div>
       </div>
@@ -281,7 +327,7 @@
             language learning system helps you learn as quickly.
           </p>
           <div class="text-center">
-            <img src="images/vocab-graph.png" alt="vocab-graph" class="img-fluid" />
+            <img loading="lazy" src="images/vocab-graph.png" alt="vocab-graph" class="img-fluid" />
           </div>
           <p class="main-p">Users love us</p>
           <div class="chats">
@@ -292,10 +338,10 @@
                   telenovelas!” - Edward L.
                 </p>
               </div>
-              <img src="images/chat-1.png" alt="chat-1" />
+              <img loading="lazy" src="images/chat-1.png" alt="chat-1" />
             </div>
             <div class="chat-box active">
-              <img src="images/chat-2.png" alt="chat-1" />
+              <img loading="lazy" src="images/chat-2.png" alt="chat-1" />
               <div class="left-chat">
                 <p>
                   “I’ve never had so much fun learning Spanish. I can binge-watch a Spanish TV
@@ -310,7 +356,7 @@
                   language. My students love it.” - Spanish Language Professor
                 </p>
               </div>
-              <img src="images/chat-3.png" alt="chat-1" />
+              <img loading="lazy" src="images/chat-3.png" alt="chat-1" />
             </div>
           </div>
         </div>
@@ -320,25 +366,31 @@
           <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-6">
               <p class="main-p">Join 100,000+ students who use Lingopie to learn a new language</p>
-              <img src="images/svgpng/logo-white.png" alt="logo-white" class="logo-white" />
+              <img
+                loading="lazy"
+                src="images/svgpng/logo-white.png"
+                alt="logo-white"
+                class="logo-white"
+              />
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6">
               <div class="try-content-parent">
                 <div class="try-content">
-                  <img src="images/checked.png" alt="" />
+                  <img loading="lazy" src="images/checked.png" alt="" />
                   <span>7-day free trial</span>
                 </div>
                 <div class="try-content">
-                  <img src="images/checked.png" alt="" />
+                  <img loading="lazy" src="images/checked.png" alt="" />
                   <span>Cancel anytime</span>
                 </div>
                 <div class="try-content">
-                  <img src="images/checked.png" alt="" />
+                  <img loading="lazy" src="images/checked.png" alt="" />
                   <span>Unlimited access</span>
                 </div>
                 <a href="https://lingopie.com/registration"
                   ><button class="classic-btn">
-                    Try it Free <img src="images/svgpng/right-arrow.png" alt="" /></button
+                    Try it Free
+                    <img loading="lazy" src="images/svgpng/right-arrow.png" alt="" /></button
                 ></a>
               </div>
             </div>
@@ -356,7 +408,7 @@
               aria-expanded="false"
               aria-controls="collapseOne"
             >
-              What is Lingopie? <img src="images/faq_dropdown.png" />
+              What is Lingopie? <img loading="lazy" src="images/faq_dropdown.png" />
             </div>
             <div
               id="collapse1One"
@@ -391,7 +443,8 @@
               aria-expanded="false"
               aria-controls="collapseTwo"
             >
-              What’s included in the Lingopie subscription? <img src="images/faq_dropdown.png" />
+              What’s included in the Lingopie subscription?
+              <img loading="lazy" src="images/faq_dropdown.png" />
             </div>
             <div
               class="inner-card collapse"
@@ -417,7 +470,7 @@
               aria-expanded="false"
               aria-controls="collapseThree"
             >
-              Where can I watch? <img src="images/faq_dropdown.png" />
+              Where can I watch? <img loading="lazy" src="images/faq_dropdown.png" />
             </div>
             <div
               class="inner-card collapse"
@@ -437,7 +490,8 @@
               aria-expanded="false"
               aria-controls="collapseFour"
             >
-              I'm a beginner. Is Lingopie right for me? <img src="images/faq_dropdown.png" />
+              I'm a beginner. Is Lingopie right for me?
+              <img loading="lazy" src="images/faq_dropdown.png" />
             </div>
             <div
               class="inner-card collapse"
@@ -464,7 +518,8 @@
               aria-expanded="false"
               aria-controls="collapseFive"
             >
-              How quickly will I learn with Lingopie? <img src="images/faq_dropdown.png" />
+              How quickly will I learn with Lingopie?
+              <img loading="lazy" src="images/faq_dropdown.png" />
             </div>
             <div
               class="inner-card collapse"
@@ -492,7 +547,8 @@
               aria-expanded="false"
               aria-controls="collapseSix"
             >
-              What languages can I learn with Lingopie? <img src="images/faq_dropdown.png" />
+              What languages can I learn with Lingopie?
+              <img loading="lazy" src="images/faq_dropdown.png" />
             </div>
             <div
               class="inner-card collapse"
@@ -519,7 +575,8 @@
               aria-expanded="true"
               aria-controls="collapse1Seven"
             >
-              What if Lingopie is not right for me? <img src="images/faq_dropdown.png" />
+              What if Lingopie is not right for me?
+              <img loading="lazy" src="images/faq_dropdown.png" />
             </div>
             <div
               class="inner-card collapse show"
@@ -538,28 +595,28 @@
       </div>
       <footer>
         <div class="inner-sec">
-          <img src="images/svgpng/footer-logo.png" alt="" class="footer-logo" />
+          <img loading="lazy" src="images/svgpng/footer-logo.png" alt="" class="footer-logo" />
           <div class="social-icons">
             <a href="https://www.facebook.com/lingopietv"
-              ><img src="images/fb.png" alt="social-images"
+              ><img loading="lazy" src="images/fb.png" alt="social-images"
             /></a>
             <a href="https://twitter.com/Lingopietv"
-              ><img src="images/twitter.png" alt="social-images"
+              ><img loading="lazy" src="images/twitter.png" alt="social-images"
             /></a>
             <a href="https://www.instagram.com/lingopietv/"
-              ><img src="images/isnta.png" alt="social-images"
+              ><img loading="lazy" src="images/isnta.png" alt="social-images"
             /></a>
             <a href="https://www.pinterest.com/Lingopietv/"
-              ><img src="images/pinterest.png" alt="social-images"
+              ><img loading="lazy" src="images/pinterest.png" alt="social-images"
             /></a>
             <a href="https://www.youtube.com/channel/UCWozl2jWVx_6QcTA7r_ayEg"
-              ><img src="images/yt.png" alt="social-images"
+              ><img loading="lazy" src="images/yt.png" alt="social-images"
             /></a>
             <a href="https://www.linkedin.com/company/lingopie/"
-              ><img src="images/linkedin.png" alt="social-images"
+              ><img loading="lazy" src="images/linkedin.png" alt="social-images"
             /></a>
             <a href="https://www.tiktok.com/@lingopietv?lang=en"
-              ><img src="images/tiktok.png" alt="social-images"
+              ><img loading="lazy" src="images/tiktok.png" alt="social-images"
             /></a>
           </div>
           <div class="d-flex flex-wrap justify-content-between">
