--- a/test/index.html
+++ b/test/index.html
@@ -55,9 +55,9 @@
     <title>Learn a New Language with Great TV</title>
 
     <!-- global css -->
-    <link rel="stylesheet" href="./assets/css/fonst.css" />
-    <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link type="text/css" rel="stylesheet" href="./assets/css/fonst.css" />
+    <link type="text/css" rel="stylesheet" href="./assets/css/bootstrap.min.css" />
+    <link type="text/css" rel="stylesheet" href="./assets/css/style.min.css" />
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
