--- a/test/index.html
+++ b/test/index.html
@@ -329,9 +329,9 @@
         <div class="inner-sec">
           <p class="main-p">The Best TV from around the world</p>
           <div class="channel-parent">
-            <img loading="lazy" src="./assets/images/azteca.png" alt="" />
+            <img loading="lazy" src="./assets/images/azteca.jpg" alt="" />
             <img loading="lazy" src="./assets/images/newen.png" alt="" />
-            <img loading="lazy" src="./assets/images/tfi.png" alt="" />
+            <img loading="lazy" src="./assets/images/tfi.jpg" alt="" />
             <img loading="lazy" src="./assets/images/rtve.png" alt="" />
             <img loading="lazy" src="./assets/images/caracol.png" alt="" />
             <img loading="lazy" src="./assets/images/nick.png" alt="" />
