--- a/test/index.html
+++ b/test/index.html
@@ -7,22 +7,25 @@
         opacity: 0 !important;
       }
     </style>
+
     <script>
+      const someFunc = (a, s, y, n, c, h, i, d, e) => {
+        s.className += ' ' + y;
+        h.start = 1 * new Date();
+        h.end = i = function () {
+          s.className = s.className.replace(RegExp(' ?' + y), '');
+        };
+        (a[n] = a[n] || []).hide = h;
+        setTimeout(function () {
+          i();
+          h.end = null;
+        }, c);
+        h.timeout = c;
+      };
+
       document.addEventListener('DOMContentLoaded', () => {
         setTimeout(() => {
-          (function (a, s, y, n, c, h, i, d, e) {
-            s.className += ' ' + y;
-            h.start = 1 * new Date();
-            h.end = i = function () {
-              s.className = s.className.replace(RegExp(' ?' + y), '');
-            };
-            (a[n] = a[n] || []).hide = h;
-            setTimeout(function () {
-              i();
-              h.end = null;
-            }, c);
-            h.timeout = c;
-          })(window, document.documentElement, 'async-hide', 'dataLayer', 4000, {
+          someFunc(window, document.documentElement, 'async-hide', 'dataLayer', 4000, {
             'GTM-T626HVD': true,
           });
         }, 1000);
@@ -31,18 +34,20 @@
 
     <!-- Google Tag Manager -->
     <script>
+      const googleManager = (w, d, s, l, i) => {
+        w[l] = w[l] || [];
+        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+      };
+
       document.addEventListener('DOMContentLoaded', () => {
         setTimeout(() => {
-          (function (w, d, s, l, i) {
-            w[l] = w[l] || [];
-            w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
-            var f = d.getElementsByTagName(s)[0],
-              j = d.createElement(s),
-              dl = l != 'dataLayer' ? '&l=' + l : '';
-            j.async = true;
-            j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-            f.parentNode.insertBefore(j, f);
-          })(window, document, 'script', 'dataLayer', 'GTM-T626HVD');
+          googleManager(window, document, 'script', 'dataLayer', 'GTM-T626HVD');
         }, 1000);
       });
     </script>
@@ -1623,17 +1628,9 @@
       </footer>
     </div>
   </body>
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"
-  ></script>
+  <script src="./assets/js/jquery-3.2.1.min.js"></script>
+  <script src="./assets/js/popper.min.js"></script>
+  <script src="./assets/js/bootstrap.min.js"></script>
   <script>
     $('.media-controls').on('click', function () {
       var vid = document.getElementById('headvideo');
