--- a/test/index.html
+++ b/test/index.html
@@ -73,7 +73,7 @@
     </header>
 
     <section class="head">
-      <div class="head__wrapper">
+      <div class="head__wrapper wrapper">
         <h1 class="mainTitle">Learn a New Language by Watching Great TV</h1>
         <div class="head__cnt">
           <div class="head__left">
@@ -142,6 +142,160 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <section class="worthyLang">
+      <div class="worthyLang__wrapper wrapper">
+        <h2 class="mainTitle">Learning a new language is finally binge worthy!</h2>
+        <h5 class="jstTitle">
+          The best shows from around the world plus countless hours of complete series to binge on.
+        </h5>
+        <div class="worthyLang__cnt worthyLangTabs">
+          <ul class="worthyLangTabs__listBtns">
+            <li class="worthyLangTabs__itemBtb">
+              <button class="worthyLangTabs__btn active" data-tabs-btn="tab1">
+                <span class="worthyLangTabs__title txt36x43"
+                  >Choose<span class="worthyLangTabs__num">1</span></span
+                >
+                <span class="worthyLangTabs__description txt18x22">
+                  <span class="txt">
+                    1000s of hours of great TV shows, telenovelas, comedies, travel, and more. New
+                    shows added monthly.
+                  </span>
+                </span>
+              </button>
+            </li>
+            <li class="worthyLangTabs__itemBtb">
+              <button class="worthyLangTabs__btn" data-tabs-btn="tab2">
+                <span class="worthyLangTabs__title txt36x43"
+                  >Watch & Click
+                  <span class="worthyLangTabs__num">2</span>
+                </span>
+                <span class="worthyLangTabs__description txt18x22">
+                  <span class="txt">
+                    All shows come with 2 sets of subtitles. Click any word to get an instant
+                    translation. The more you watch, the more you learn.
+                  </span>
+                </span>
+              </button>
+            </li>
+            <li class="worthyLangTabs__itemBtb">
+              <button class="worthyLangTabs__btn" data-tabs-btn="tab3">
+                <span class="worthyLangTabs__title txt36x43">
+                  Learn
+                  <span class="worthyLangTabs__num">3</span>
+                </span>
+                <span class="worthyLangTabs__description txt18x22">
+                  <span class="txt">
+                    Review what you learned with contextual & video based flashcards. Track your
+                    progress as you watch and see your confidence grow.
+                  </span>
+                </span>
+              </button>
+            </li>
+          </ul>
+          <ul class="worthyLangTabs__listBlocks">
+            <li class="worthyLangTabs__itemBlock active" data-tabs-block="tab1">
+              <img src="./img/worthyLang/mac-show.png" alt="" />
+            </li>
+            <li class="worthyLangTabs__itemBlock" data-tabs-block="tab2" style="display: none">
+              <img src="./img/worthyLang/mac-show2.png" alt="" />
+            </li>
+            <li class="worthyLangTabs__itemBlock" data-tabs-block="tab3" style="display: none">
+              <img src="./img/worthyLang/mac-show3.png" alt="" />
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="asSeen">
+      <div class="wrapper asSeen__wrapper">
+        <p class="jstTitle">As seen in...</p>
+        <ul class="asSeen__list">
+          <li class="asSeen__item">
+            <img src="./img/asSeen/variety.png" alt="" />
+          </li>
+          <li class="asSeen__item">
+            <img src="./img/asSeen/forbs.png" alt="" />
+          </li>
+          <li class="asSeen__item">
+            <img src="./img/asSeen/inc.png" alt="" />
+          </li>
+          <li class="asSeen__item">
+            <img src="./img/asSeen/yahoo.png" alt="" />
+          </li>
+          <li class="asSeen__item">
+            <img src="./img/asSeen/frommers.png" alt="" />
+          </li>
+          <li class="asSeen__item">
+            <img src="./img/asSeen/benzinga.png" alt="" />
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="thousandHours">
+      <div class="thousandHours__bg"></div>
+      <div class="thousandHours__wrapper wrapper">
+        <h2 class="mainTitle">1000s of Hours of Great international TV</h2>
+        <p class="jstTitle">
+          Get access to daily news, telenovelas, comedies, travel shows & much more. New shows are
+          added every month so there’s always something new to learn with.
+        </p>
+        <button class="button">
+          Try for <span class="free">Free</span>
+          <svg class="triangle-container" width="30" height="30" viewBox="-50 -50 300 300">
+            <polygon
+              class="triangle"
+              stroke-linejoin="round"
+              points="100,0 0,200 200,200"
+            ></polygon>
+          </svg>
+        </button>
+      </div>
+    </section>
+    <section class="designerLevels">
+      <div class="designerLevels__wrapper wrapper">
+        <h2 class="mainTitle">Designed For All Levels</h2>
+        <p class="jstTitle">
+          TV Shows & tools to make learning effective and fun, no matter what level you are from
+          beginner to advanced.
+        </p>
+        <div class="designerLevels__row">
+          <div class="designerLevels__item">
+            <ul class="designerLevels__stars">
+              <li class="designerLevels__star"></li>
+            </ul>
+            <p class="jstTitle">Beginner</p>
+          </div>
+          <div class="designerLevels__item">
+            <ul class="designerLevels__stars">
+              <li class="designerLevels__star"></li>
+              <li class="designerLevels__star"></li>
+            </ul>
+            <p class="jstTitle">Intermediate</p>
+          </div>
+          <div class="designerLevels__item">
+            <ul class="designerLevels__stars">
+              <li class="designerLevels__star"></li>
+              <li class="designerLevels__star"></li>
+              <li class="designerLevels__star"></li>
+            </ul>
+            <p class="jstTitle">Advanced</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="bestTV">
+      <div class="bestTV__wrapper wrapper">
+        <h2 class="mainTitle">The Best TV from around the world</h2>
+        <ul class="bestTV__list">
+          <li class="bestTV__item"><img src="./img/bestTV/azteca.jpg" alt="" /></li>
+          <li class="bestTV__item"><img src="./img/bestTV/caracol.png" alt="" /></li>
+          <li class="bestTV__item"><img src="./img/bestTV/newen.png" alt="" /></li>
+          <li class="bestTV__item"><img src="./img/bestTV/nick.png" alt="" /></li>
+          <li class="bestTV__item"><img src="./img/bestTV/rtve.png" alt="" /></li>
+          <li class="bestTV__item"><img src="./img/bestTV/tfi.jpg" alt="" /></li>
+        </ul>
       </div>
     </section>
 
