--- a/test/japanese.html
+++ b/test/japanese.html
@@ -72,12 +72,10 @@
 
     <section class="head">
       <div class="head__wrapper wrapper">
-        <h1 class="mainTitle">Learn a New Language by Watching Great TV</h1>
+        <h1 class="mainTitle">Learn Japanese with Great Japanese TV</h1>
         <div class="head__cnt">
           <div class="head__left">
-            <p class="jstTitle">
-              Become fluent naturally by watching and listening to native speakers on TV.
-            </p>
+            <p class="jstTitle">Bingewatch Your Way to Fluency</p>
             <p class="txt18x22">
               Pick a language, choose from thousands of shows, sit back and binge watch your way to
               fluency.
@@ -107,7 +105,7 @@
                 data-video="0"
               >
                 <source
-                  src="https://lingo-market.s3.eu-central-1.amazonaws.com/NewFlowAdv1-compressed.mp4"
+                  src="./assets/video/learn-japanese.mp4"
                   class="videoContainer__responsive"
                 />
                 Your browser does not support the video tag.
@@ -234,7 +232,7 @@
     <section class="thousandHours">
       <div class="thousandHours__bg"></div>
       <div class="thousandHours__wrapper wrapper">
-        <h2 class="mainTitle">1000s of Hours of Great international TV</h2>
+        <h2 class="mainTitle">1000s of Hours of Great Japanese TV</h2>
         <p class="jstTitle">
           Get access to daily news, telenovelas, comedies, travel shows & much more. New shows are
           added every month so there’s always something new to learn with.
@@ -343,7 +341,7 @@
       <div class="tryalAccess__bg"></div>
       <div class="tryalAccess__wrapper wrapper">
         <div class="tryalAccess__left">
-          <h2 class="mainTitle">Join 100,000+ students who use Lingopie to learn a new language</h2>
+          <h2 class="mainTitle">Join 100,000+ students who use Lingopie to learn Japanese</h2>
           <img src="./assets/img/elements/logo-white.png" alt="" />
         </div>
         <div class="tryalAccess__right">
