--- a/test/italian.html
+++ b/test/italian.html
@@ -12,6 +12,26 @@
     <meta name="viewport" content="width=device-width, instial-scale=1, shrink-to-fit=no" />
 
     <link media="all" rel="stylesheet" type="text/css" href="./assets/css/styles.min.css" />
+    <!-- Google Tag Manager -->
+    <script>
+      const googleManager = (w, d, s, l, i) => {
+        w[l] = w[l] || [];
+        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+      };
+
+      document.addEventListener('DOMContentLoaded', () => {
+        setTimeout(() => {
+          googleManager(window, document, 'script', 'dataLayer', 'GTM-T626HVD');
+        }, 1000);
+      });
+    </script>
+    <!-- End Google Tag Manager -->
   </head>
   <body>
     <header class="header">
